--- a/app/component/map/map.scss
+++ b/app/component/map/map.scss
@@ -78,10 +78,10 @@ div.leaflet-container {
 }
 
 div.current-location-marker > span > svg.icon {
-  width: 60px;
-  height: 60px;
-  margin-top: -25px;
-  margin-left: -25px;
+  width: 64px;
+  height: 64px;
+  margin-top: -27px;
+  margin-left: -27px;
   fill: white;
 }
 
